k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-ns
  labels:
    name: ecommerce
    env: production
